--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -127,7 +127,7 @@ button {
   letter-spacing: normal;
   text-align: center;
   color: #000;
-  margin-left: 25%;
+  margin-left: 30%;
 }
 .lorem {
     width: 180px;
@@ -159,5 +159,68 @@ button {
   letter-spacing: normal;
   text-align: center;
   color: #000;
+  margin-left: 26%;
+ 
+}
+.mauri{
+    width: 180px;
+  height: 63px;
+  flex-grow: 0;
+  margin: 1px 2px 0;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: center;
+  color: #000;
   margin-left: 20%;
+  font-size: 16px;
+}
+.morbi {
+    width: 184px;
+  height: 30px;
+  flex-grow: 0;
+  margin: 0 0 1px;
+  font-family: RobotoSlab;
+  font-size: 18px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: center;
+  color: #000;
+  margin-left: 27%;
+  padding-top: 40px;
+}
+.ali {
+    width: 180px;
+  height: 63px;
+  flex-grow: 0;
+  margin: 1px 2px 0;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: center;
+  color: #000;
+  font-size: 16px;
+  margin-left: 20%;
+}
+.more {
+    width: 184px;
+  height: 45px;
+  flex-grow: 0;
+  margin: 0 0 10px;
+  border-radius: 22.5px;
+  background-color: #f26002;
+  color: white;
+  margin-left: 20%;
+  margin-top: 15%;
 }
