--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -224,3 +224,57 @@ button {
   margin-left: 20%;
   margin-top: 15%;
 }
+.foo {
+    width: 320px;
+    height: 465px;
+    flex-grow: 0;
+    margin: 624px 0 0;
+    padding: 65px 15px 36px;
+    background-color: #304268;
+    margin-left: 30%;
+    margin-top: 0%;
+    
+}
+.arboeve {
+    color: white;
+    margin-left: 30%;
+    font-family: Roboto;
+}
+.boo {
+margin-top: 10px;
+}
+.eve {
+    margin-top: 10px;
+}
+.rea {
+    margin-top: 10px;
+}
+.tip {
+    margin-top: 10px;
+}
+.rrss {
+    color: white;
+    margin-left: 30%;
+    font-family: Roboto;
+    margin-top: 40px;
+    
+}
+.twi {
+    margin-top: 10px;
+}
+.insta {
+    margin-top: 10px;
+}
+.masto {
+    margin-top: 10px;
+}
+.c {
+    color: white;
+    margin-top: 40px;
+    margin-left: 35%;
+}
+.cor {
+    color: white;
+    margin-left: 30%;
+    margin-top: 10px;
+}
