--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,9 +16,25 @@ html {
     height: 100vh;
 }
 
+.cuadrado {
+  width: 80px;
+  height: 80px;
+  background-color: rgb(87, 120, 230);
+}
+.img {
+  width: 100px;
+  height: auto;
+  display: block;
+}
+
+
+
 h1 {color: white;
     font-size: 80px;
     padding: 150px;
+    text-align: center;
+    font-size: center;
+    
 
 }
 
@@ -27,15 +43,24 @@ h1 {color: white;
     font-size: 30px;
     margin-top: 10px;
     text-align: center;
+    align-items: end;
+
+}
+.flechadown {
 
 }
 
+.rectanblanc {
+  
+  background-color: white;
+  text-align: center;
+  margin-bottom: 0%;
 
+    padding: 40px 30px 100px;
+}
 
 h2 {
-    width: 290px;
-  height: 60px;
-  flex-grow: 0;
+
   margin: 23px 0 20px;
   font-family: RobotoSlab;
   font-size: 35px;
@@ -46,14 +71,11 @@ h2 {
   letter-spacing: normal;
   text-align: left;
   color: #000;
-  margin-left: 30%;
-  margin-top: 0;
+
 }
 
 .insom {
-    width: 88px;
-  height: 30px;
-  flex-grow: 0;
+
   margin: 0 202px 73px 0;
   font-family: Roboto;
   font-size: 14px;
@@ -64,15 +86,11 @@ h2 {
   letter-spacing: normal;
   text-align: left;
   color: #8ccbea;
-  margin-left: 30%;
-  
-  margin-bottom: 0%;
+
 }
 
 .donec {
-    width: 290px;
-  height: 120px;
-  flex-grow: 0;
+
   margin: 20px 0 26px;
   font-family: Roboto;
   font-size: 18px;
@@ -83,7 +101,7 @@ h2 {
   letter-spacing: normal;
   text-align: left;
   color: #4a4a4a;
-  margin-left: 30%;
+
 }
 
 button {
@@ -99,27 +117,50 @@ button {
   
 }
 
+.butgo {
+    // display: inline-block;
+    padding: 10px 20px;
+    background-color: white;
+    color: rgb(223, 118, 20);
+    text-decoration: none;
+    justify-content: center;
+    border: solid 2px #f26002
+   
+
+  }
+
+
 .divdos {
-    width: 320px;
-    height: 624px;
-    flex-grow: 0;
-    margin: 400.9px 0 0;
-    padding: 29px 15px 50px;
-    margin-left: 30%;
+
+    margin: 40px 0 0;
+    padding: 30px;
+    
     margin-top: 0;
-    background-color: rgb(207, 227, 240)
+    background-color: rgb(207, 227, 240);
+    text-align: center;
+    
+}
+
+h2 {
+    text-align: center;
+    font-size: center;
+}
+
+h3 {
+    text-align: center;
 }
 .reas {
     font-size: center;
     font-size: 25px;
-    margin-left: 3%;
+    // margin-left: 3%;
     display: flex;
     justify-content: center;
+    text-align: center;
 
 }
 .ut {
-    width: 184px;
-  height: 30px;
+  /*  width: 184px;
+  height: 30px;*/
   flex-grow: 0;
   margin: 0 0 1px;
   font-family: RobotoSlab;
@@ -131,13 +172,13 @@ button {
   letter-spacing: normal;
   text-align: center;
   color: #000;
-  margin-left: 30%;
-  display: flex;
+  /*margin-left: 30%;
+  display: flex;*/
   
 }
 .lorem {
-    width: 180px;
-  height: 63px;
+//     width: 180px;
+//   height: 63px;
   flex-grow: 0;
   margin: 1px 2px 0;
   font-family: Roboto;
@@ -149,11 +190,11 @@ button {
   letter-spacing: normal;
   text-align: center;
   color: #000;
-  margin-left: 18%;
+//   margin-left: 18%;
 }
 .cur {
-    width: 184px;
-  height: 30px;
+//     width: 184px;
+//   height: 30px;
   flex-grow: 0;
   margin: 0 0 1px;
   font-family: RobotoSlab;
@@ -165,11 +206,11 @@ button {
   letter-spacing: normal;
   text-align: center;
   color: #000;
-  margin-left: 20%;
+//   margin-left: 20%;
 }
 .mauri{
-    width: 180px;
-  height: 63px;
+//     width: 180px;
+//   height: 63px;
   flex-grow: 0;
   margin: 1px 2px 0;
   font-family: Roboto;
@@ -181,14 +222,15 @@ button {
   letter-spacing: normal;
   text-align: center;
   color: #000;
-  margin-left: 20%;
-  font-size: 16px;
-  margin-top: 10%;
+  font-size: center;
+  // margin-left: 20%;
+  // font-size: 16px;
+//   margin-top: 10%;
 
 }
 .morbi {
-    width: 184px;
-  height: 30px;
+//     width: 184px;
+//   height: 30px;
   flex-grow: 0;
   margin: 0 0 1px;
   font-family: RobotoSlab;
@@ -200,14 +242,14 @@ button {
   letter-spacing: normal;
   text-align: center;
   color: #000;
-  margin-left: 20%;
-  padding-top: 60px;
+//   margin-left: 20%;
+//   padding-top: 60px;
 
   
 }
 .ali {
-    width: 180px;
-  height: 63px;
+//     width: 180px;
+//   height: 63px;
   flex-grow: 0;
   margin: 1px 2px 0;
   font-family: Roboto;
@@ -220,32 +262,43 @@ button {
   text-align: center;
   color: #000;
   font-size: 16px;
-  margin-left: 20%;
-  margin-top: 10%;
+//   margin-left: 20%;
+//   margin-top: 10%;
 }
 .more {
-    width: 184px;
-  height: 45px;
+//     width: 184px;
+//   height: 45px;
   flex-grow: 0;
   margin: 0 0 10px;
   border-radius: 22.5px;
   background-color: #f26002;
   color: white;
-  margin-left: 20%;
-  margin-top: 10%;
+//   margin-left: 20%;
+//   margin-top: 10%;
   font-size: 18px;
   
   
 }
+
+footer {
+  display: grid;
+  place-items: center;
+  background-color: #304268;
+  color: white;
+
+}
 .foo {
-    width: 320px;
-    height: 465px;
-    flex-grow: 0;
-    margin: 624px 0 0;
+    // width: 320px;
+    // height: 465px;
+    // flex-grow: 0;
     padding: 65px 15px 36px;
     background-color: #304268;
-    margin-left: 30%;
-    margin-top: 0%;
+    // margin-left: 30%;
+    // margin-top: 0%;
+    text-align: center;
+    font-size: center;
+   
+  
     
 }
 
@@ -275,8 +328,10 @@ margin-top: 10px;
     margin-top: 40px;
     
 }
+
 .twi {
     margin-top: 10px;
+    color: white;
 }
 .insta {
     margin-top: 10px;
@@ -294,3 +349,4 @@ margin-top: 10px;
     margin-left: 30%;
     margin-top: 10px;
 }
+
