--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
 
 html {  
     margin: 0%;
-    
+    font-family: 'Roboto', sans-serif;
     
 }
 
@@ -17,10 +17,23 @@ html {
 }
 
 .cuadrado {
-  width: 80px;
-  height: 80px;
+  width: 44px;
+  height: 42px;
   background-color: rgb(87, 120, 230);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
+.menu {
+  width: 15px;
+  height: 15px;
+  position: fixed;
+
+
+}
+
+
 .img {
   width: 100px;
   height: auto;
@@ -44,10 +57,6 @@ h1 {color: white;
     margin-top: 10px;
     text-align: center;
     align-items: end;
-
-}
-.flechadown {
-
 }
 
 .rectanblanc {
@@ -62,7 +71,7 @@ h1 {color: white;
 h2 {
 
   margin: 23px 0 20px;
-  font-family: RobotoSlab;
+  font-family: "Roboto Slab", serif;
   font-size: 35px;
   font-weight: bold;
   font-stretch: normal;
@@ -77,7 +86,7 @@ h2 {
 .insom {
 
   margin: 0 202px 73px 0;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -92,7 +101,7 @@ h2 {
 .donec {
 
   margin: 20px 0 26px;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: normal;
   font-stretch: normal;
@@ -141,6 +150,21 @@ button {
     
 }
 
+@media screen and (min-width: 768px) {
+  .divdos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: red;
+  }
+}
+
+
+@media screen and (min-width: 1280px) {
+  .divdos {
+    background-color: blue;
+  }
+}
+
 h2 {
     text-align: center;
     font-size: center;
@@ -163,7 +187,7 @@ h3 {
   height: 30px;*/
   flex-grow: 0;
   margin: 0 0 1px;
-  font-family: RobotoSlab;
+  font-family: "Roboto Slab", serif;
   font-size: 19px;
   font-weight: bold;
   font-stretch: normal;
@@ -181,7 +205,7 @@ h3 {
 //   height: 63px;
   flex-grow: 0;
   margin: 1px 2px 0;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: normal;
   font-stretch: normal;
@@ -197,7 +221,7 @@ h3 {
 //   height: 30px;
   flex-grow: 0;
   margin: 0 0 1px;
-  font-family: RobotoSlab;
+  font-family: "Roboto Slab", serif;
   font-size: 18px;
   font-weight: bold;
   font-stretch: normal;
@@ -213,7 +237,7 @@ h3 {
 //   height: 63px;
   flex-grow: 0;
   margin: 1px 2px 0;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: normal;
   font-stretch: normal;
@@ -233,7 +257,7 @@ h3 {
 //   height: 30px;
   flex-grow: 0;
   margin: 0 0 1px;
-  font-family: RobotoSlab;
+  font-family: "Roboto Slab", serif;
   font-size: 18px;
   font-weight: bold;
   font-stretch: normal;
@@ -252,7 +276,7 @@ h3 {
 //   height: 63px;
   flex-grow: 0;
   margin: 1px 2px 0;
-  font-family: Roboto;
+  font-family: 'Roboto';
   font-size: 18px;
   font-weight: normal;
   font-stretch: normal;
@@ -302,12 +326,16 @@ footer {
     
 }
 
-
+.link {
+  color: white;
+  margin-top: 10px;
+  padding-top: 40px;
+}
   
 .arboeve {
     color: white;
     margin-left: 30%;
-    font-family: Roboto;
+    font-family: 'Roboto';
 }
 .boo {
 margin-top: 10px;
@@ -324,8 +352,11 @@ margin-top: 10px;
 .rrss {
     color: white;
     margin-left: 30%;
-    font-family: Roboto;
+    font-family: 'Roboto';
     margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     
 }
 
@@ -350,3 +381,6 @@ margin-top: 10px;
     margin-top: 10px;
 }
 
+@media screen and (min-width: 768px) {
+
+}
