--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,11 +9,21 @@ body {
     
 }
 
+.mod1 {
+    background-image: url(../../public/images/header.jpg);
+       background-size: cover;
+       background-position: center;
+       background-repeat: no-repeat;
+       height: 300px;
+       display: flex;
+       }
+
 .header {
     background-color: transparent;
     background-image: url(../../public/images/header.jpg);
     height: 100px;
-   
+    display: flex;
+
     
 }
 
@@ -25,9 +35,17 @@ body {
     position: fixed;
 }
 
-.mod1 {
-       
-       height: 300px;
+.logo{
+    
+  justify-content: center;
+}
+
+.mod1a {
+   
+}
+
+.h1 {
+    color: #0c474b;
 
 }
 
@@ -41,6 +59,56 @@ body {
   text-align: center;
 }
 
+.mod2{
+    background-color: #f0ebe5;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    height: 1360px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 300px 150px 150px 150px 150px 150px 150px;
+    grid-auto-rows: 150px;
+    gap: 20px;
+}
+
+.text1v {
+    font-size: 30px;
+    font-weight: 700;
+    color: #0c474b;
+    grid-column: 2/3;
+}
+
+h3 {
+    color: #0c474b;
+}
+
+p {
+    color: #0c474b;
+}
+
+.imgtable {
+    grid-column: 2/3;
+}
+
+.text2l {
+    grid-column: 2/3;
+}
+
+.imgbag {
+    grid-column: 2/3;
+}
+
+.text3m {
+    grid-column: 2/3;
+}
+
+.imgpark {
+    grid-column: 2/3;
+}
+
+.text4g {
+    grid-column: 2/3;
+}
 
 // @media screen and (min-width: 900px) 
   
