--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 }
 
 body {  
-    margin: 0%;
+    margin: 0;
     font-family: "Poppins";
     
 }
@@ -16,6 +16,9 @@ body {
        background-repeat: no-repeat;
        height: 300px;
        display: flex;
+       align-items: center;
+    flex-direction: column;
+    gap: 20px;
        }
 
 .header {
@@ -23,9 +26,22 @@ body {
     background-image: url(../../public/images/header.jpg);
     height: 100px;
     display: flex;
-
-    
 }
+
+.menu-desktop {
+  display: none;
+}
+
+.containermenu {
+    position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+}
+
+.menu-link {
+  display: none;
+ } 
 
 .menu {
      width: 24px;
@@ -33,6 +49,7 @@ body {
     margin: 36px 43px 98px 33px;
     object-fit: contain;
     position: fixed;
+    
 }
 
 .logo{
@@ -46,6 +63,7 @@ body {
 
 .h1 {
     color: #0c474b;
+    padding-bottom: 60px;
 
 }
 
@@ -57,6 +75,7 @@ body {
   font-weight: bold;
   cursor: pointer;
   text-align: center;
+  
 }
 
 .mod2{
@@ -66,7 +85,7 @@ body {
     height: 1360px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 300px 150px 150px 150px 150px 150px 150px;
+    grid-template-rows: 300px 300px 300px 300px  ;
     grid-auto-rows: 150px;
     gap: 20px;
 }
@@ -80,6 +99,8 @@ body {
 
 h3 {
     color: #0c474b;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 p {
@@ -160,20 +181,23 @@ p {
 .p1 {
     font-weight: 600;
     font-size: 30px;
+    padding-bottom: 10px;
 }
 
 .p2 {
     font-size: 20px;
+    padding-bottom: 20px;
 }
 
 .boton2 {
-  background-color: #0c474b;
+  background-color: #0b8a2b;
   color: #f0ebe5;
-  padding: 10px 20px;
+  padding: 20px 30px;
   display: inline-block;
   font-weight: bold;
   cursor: pointer;
   text-align: center;
+  border-radius: 15px;
 }
 
 .wc {
@@ -191,46 +215,75 @@ p {
     flex-direction: column;
     gap: 20px;
     flex-wrap: wrap;
+    padding-left: 20px;
+    padding-right: 20px;
     
 }
 
 .foop1 {
     padding-top: 50px;
+    padding-left: 30px;
     color: #f0ebe5;
     font-weight: 600;
     font-size: 30px;
+    justify-content: center;
 }
 
 .ul1 {
+  list-style: none;
+}
+
+.ul1 a {
     list-style-type: none;
+    color: #f0ebe5;
+     text-decoration: none;
+     
 }
 
 .foop2 {
     padding-top: 50px;
+    padding-left: 30px;
     color: #f0ebe5;
     font-weight: 600;
     font-size: 30px;
 }
 
 .ul2 {
+  list-style: none;
+}
+
+.ul2 a {
     list-style-type: none;
+    color: #f0ebe5;
+     text-decoration: none;
 }
 
 .foop3 {
     padding-top: 50px;
+    padding-left: 40px;
     color: #f0ebe5;
     font-weight: 600;
     font-size: 30px;
 }
 
 .ul3 {
+  list-style: none;
+}
+
+.ul3 a {
     list-style-type: none;
+    color: #f0ebe5;
+     text-decoration: none;
 }
 
 .rrss {
     display: flex;
     gap: 10px;
-    
+    padding-left: 50px;
+}
+
+li {
+    color: #f0ebe5;
 }
 
 .up {
@@ -242,8 +295,142 @@ p {
 
 
 
-// @media screen and (min-width: 900px) 
+ @media screen and (min-width: 900px) {
+
+    .h1 {
+    color: #0c474b;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+
+     .menu-link {
+    display: block;
+  }
+
+  .mod2 {
+    background-color: #f0ebe5;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    height: 650px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 300px 300px 300px;
+    grid-auto-rows: 150px;
+    gap: 1px;
+}
+
+.open {
+  display: block;
+  padding-left: 200px;
+}
+
+.text1v {
+    font-size: 30px;
+    padding-left: 150px;
+    font-weight: 00;
+    color: #0c474b;
+    grid-column: 1/4;
+    padding-top: 80px;
+}
+
+.imgtable {
+    grid-column: 1/2;
+    padding-left: 20px;
+}
+
+.imgpark {
+    grid-column: 3/4;
+}
+
+  .footer {
+    background-color: #0c474b;
+    height: 400px;
+    color: #f0ebe5;
+     display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+    
+ }
   
+}
+
+ @media screen and (min-width: 1728px) {
+
+.mod1 {
+    height: 1200px;
+    display: flex;
+    
+}
+
+.desktopheader {
+    display: flex;
+   gap: 200px;
+   padding-top: 100px;
+}
+
+.logo {
+    width: auto;
+    height: 200px;
+    padding-bottom: 30px;
+    
+}
+
+.menu-desktop {
+    display: flex;
+    gap: 20px;
+    color: #0c474b;
+    
+  }
+
+  .menu-desktop a {
+    color: #0c474b;
+     text-decoration: none;
+     font-size: 20px;
+     
+  }
+
+  .containermenu {
+    display: none;
+  }
+
+  .h1 {
+    font-size: 30px;
+    padding-right: 1000px;
+    padding-top: 450px;
+  }
+
+ .mod2 {
+    background-color: #f0ebe5;
+    padding-top: 40px;
+    
+    height: 700px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 200px 200px 200px;
+    grid-auto-rows: 150px;
+    gap: 1px;
+    padding-left: 50px;
+    padding-right: 50px;
+ }
+
+ .text1v {
+   grid-column: 2/3;
+   font-size: 30px;
+   padding-top: 20px;
+   padding-left: 0px;
+ }
+
+ .open {
+    padding-top: 0px;
+ }
+
+ .footer {
+    justify-content: space-around;
+ }
+
+ }
 
 
-// @media screen and (min-width: 1728px) 
